# smartmain

./: .env  .gitignore  README.md  base_exceptions.py  bot.py  contract_interection.py  db.py  infura.py  models.py  prompts.py  pyproject.toml  shemas.py  smart_bot.db  tools.py
DataBase/: data_models.py  db.py  tools.py
Secure/: utils.py
contracts/: my_contract.sol
my-hardhat-project/: .gitignore  hardhat.config.js  package-lock.json  package.json
my-hardhat-project/contracts/: MFO_Loan.sol
my-hardhat-project/ignition/modules/: Lock.js
my-hardhat-project/scripts/: deploy.js
